@@ -10,85 +10,117 @@
 #include "pc_pgsql.h"	   /* Common PgSQL support for our type */
 
 Datum pcpatch_setpcid(PG_FUNCTION_ARGS);
+Datum pcpatch_transform(PG_FUNCTION_ARGS);
 
 
-static bool
-pcpatch_schema_same_dimensions(const PCSCHEMA *s1, const PCSCHEMA *s2)
+static SERIALIZED_PATCH *
+pcpatch_set_schema(SERIALIZED_PATCH *serpa,
+				  PCSCHEMA *oschema, PCSCHEMA *nschema, float8 def)
 {
-	size_t i;
-
-	if ( s1->ndims != s2->ndims )
-		return false;
-
-	for ( i = 0; i < s1->ndims; i++ )
-	{
-		PCDIMENSION *s1dim = s1->dims[i];
-		PCDIMENSION *s2dim = s2->dims[i];
-
-		if ( strcasecmp(s1dim->name, s2dim->name) != 0 )
-			return false;
-
-		if ( s1dim->interpretation != s2dim->interpretation )
-			return false;
-	}
-
-	return true;
-}
-
-
-PG_FUNCTION_INFO_V1(pcpatch_setpcid);
-Datum pcpatch_setpcid(PG_FUNCTION_ARGS)
-{
-	PCPATCH *paout = NULL;
 	SERIALIZED_PATCH *serpatch;
-	SERIALIZED_PATCH *serpa = PG_GETARG_SERPATCH_P(0);
-	int32 pcid = PG_GETARG_INT32(1);
-	float8 def = PG_GETARG_FLOAT8(2);
-	PCSCHEMA *old_schema = pc_schema_from_pcid(serpa->pcid, fcinfo);
-	PCSCHEMA *new_schema = pc_schema_from_pcid(pcid, fcinfo);
+	PCPATCH *paout;
 
-	if ( pcpatch_schema_same_dimensions(old_schema, new_schema) )
+	if ( pc_schema_same_dimensions(oschema, nschema) )
 	{
-		// old_schema and new_schema have the same dimensions at the same
-		// positions, so we can take a fast path avoid the point-by-point,
-		// dimension-by-dimension copying
+		// oschema and nschema have the same dimensions at the same
+		// positions, so we can take a fast path and avoid the
+		// point-by-point dimension-by-dimension copying
 
-		if ( old_schema->compression == new_schema->compression )
+		if ( oschema->compression == nschema->compression )
 		{
 			// no need to deserialize the patch
 			serpatch = palloc(serpa->size);
 			if ( ! serpatch )
-				PG_RETURN_NULL();
+				return NULL;
 			memcpy(serpatch, serpa, serpa->size);
-			serpatch->pcid = pcid;
-			PG_RETURN_POINTER(serpatch);
+			serpatch->pcid = nschema->pcid;
+			return serpatch;
 		}
 		else
 		{
-			paout = pc_patch_deserialize(serpa, old_schema);
+			paout = pc_patch_deserialize(serpa, oschema);
 			if ( ! paout )
-				PG_RETURN_NULL();
-			paout->schema = new_schema;
+				return NULL;
+			paout->schema = nschema;
 		}
 	} else {
 		PCPATCH *patch;
 
-		patch = pc_patch_deserialize(serpa, old_schema);
+		patch = pc_patch_deserialize(serpa, oschema);
 		if ( ! patch )
-			PG_RETURN_NULL();
+			return NULL;
 
-		paout = pc_patch_set_schema(patch, new_schema, def);
+		paout = pc_patch_set_schema(patch, nschema, def);
 
 		if ( patch != paout )
 			pc_patch_free(patch);
 
 		if ( ! paout )
-			PG_RETURN_NULL();
+			return NULL;
 
 	}
 
 	serpatch = pc_patch_serialize(paout, NULL);
 	pc_patch_free(paout);
 
+	return serpatch;
+}
+
+
+PG_FUNCTION_INFO_V1(pcpatch_setpcid);
+Datum pcpatch_setpcid(PG_FUNCTION_ARGS)
+{
+	SERIALIZED_PATCH *serpatch;
+	SERIALIZED_PATCH *serpa = PG_GETARG_SERPATCH_P(0);
+	int32 pcid = PG_GETARG_INT32(1);
+	float8 def = PG_GETARG_FLOAT8(2);
+	PCSCHEMA *oschema = pc_schema_from_pcid(serpa->pcid, fcinfo);
+	PCSCHEMA *nschema = pc_schema_from_pcid(pcid, fcinfo);
+
+	serpatch = pcpatch_set_schema(serpa, oschema, nschema, def);
+	if ( ! serpatch )
+		PG_RETURN_NULL();
 	PG_RETURN_POINTER(serpatch);
+}
+
+
+PG_FUNCTION_INFO_V1(pcpatch_transform);
+Datum pcpatch_transform(PG_FUNCTION_ARGS)
+{
+	SERIALIZED_PATCH *serpatch;
+	SERIALIZED_PATCH *serpa = PG_GETARG_SERPATCH_P(0);
+	int32 pcid = PG_GETARG_INT32(1);
+	float8 def = PG_GETARG_FLOAT8(2);
+	PCSCHEMA *oschema = pc_schema_from_pcid(serpa->pcid, fcinfo);
+	PCSCHEMA *nschema = pc_schema_from_pcid(pcid, fcinfo);
+
+	// fast path to setpcid if no data transformation is required
+
+	if ( pc_schema_same_interpretations(oschema, nschema) )
+	{
+		serpatch = pcpatch_set_schema(serpa, oschema, nschema, def);
+		if ( ! serpatch )
+			PG_RETURN_NULL();
+		PG_RETURN_POINTER(serpatch);
+	}
+	else
+	{
+		PCPATCH *patch, *paout;
+
+		patch = pc_patch_deserialize(serpa, oschema);
+		if ( ! patch )
+			PG_RETURN_NULL();
+
+		paout = pc_patch_transform(patch, nschema, def);
+
+		pc_patch_free(patch);
+
+		if ( ! paout )
+			PG_RETURN_NULL();
+
+		serpatch = pc_patch_serialize(paout, NULL);
+		pc_patch_free(paout);
+
+		PG_RETURN_POINTER(serpatch);
+	}
 }
