@@ -321,6 +321,10 @@ CREATE OR REPLACE FUNCTION PC_SetPCId(p pcpatch, pcid int4, def float8 default 0
 	RETURNS pcpatch AS 'MODULE_PATHNAME', 'pcpatch_setpcid'
 	LANGUAGE 'c' IMMUTABLE STRICT;
 
+CREATE OR REPLACE FUNCTION PC_Transform(p pcpatch, pcid int4, def float8 default 0.0)
+	RETURNS pcpatch AS 'MODULE_PATHNAME', 'pcpatch_transform'
+	LANGUAGE 'c' IMMUTABLE STRICT;
+
 -------------------------------------------------------------------
 --  POINTCLOUD_COLUMNS
 -------------------------------------------------------------------
